<resources>
    <string name="app_name">MyApp2</string>

    <string name="button">-</string>
    <string name="button2">+</string>

    <string name="buttonScreen2">Đi đến màn hình 2</string>
    <string name="buttonScreen3">Đi đến màn hình 3</string>
    <string name="buttonStandard">Standard</string>
    <string name="buttonSingleTop">SingleTop</string>
    <string name="buttonSingleTask">SingleTask</string>
    <string name="buttonSingleInstance">SingleInstance</string>

    <string name="buttonStartservice">Start Background Service</string>
    <string name="buttonStopservice">Stop Background Service</string>
    <string name="buttonStartFservice">Start Foreground Service</string>
    <string name="buttonStopFservice">Stop Foreground Service</string>

    <string name="txtViewScreen1">Màn hình 1</string>
    <string name="txtViewScreen2">Màn hình 2</string>
    <string name="txtViewScreen3">Màn hình 3</string>
    <string name="txtViewStandard">Standard</string>
    <string name="txtViewSingleTop">SingleTop</string>
    <string name="txtViewSingleTask">SingleTask</string>
    <string name="txtViewSingleInstance">SingleInstance</string>


</resources>